WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290774
http/tests/security/wrong-global-object-after-javascript-url.html hits an assertion
https://bugs.webkit.org/show_bug.cgi?id=290774
Summary
http/tests/security/wrong-global-object-after-javascript-url.html hits an ass...
Chris Dumez
Reported
2025-03-31 10:45:38 PDT
http/tests/security/wrong-global-object-after-javascript-url.html hits an assertion in WebLocalFrameLoaderClient::dispatchDidReachLayoutMilestone(): ``` ASSERT(!m_frame->isMainFrame() || webPage->corePage()->settings().suppressesIncrementalRendering() || m_didCompletePageTransition); ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-03-31 10:45:45 PDT
<
rdar://148121607
>
Chris Dumez
Comment 2
2025-03-31 10:52:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43328
EWS
Comment 3
2025-04-02 15:08:18 PDT
Committed
293120@main
(bd20485fedcd): <
https://commits.webkit.org/293120@main
> Reviewed commits have been landed. Closing PR #43328 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug