http/tests/security/wrong-global-object-after-javascript-url.html hits an assertion https://bugs.webkit.org/show_bug.cgi?id=290774 rdar://148121607

Reviewed by Alan Baradlay.

We were hitting the following assertion in `WebLocalFrameLoaderClient::dispatchDidReachLayoutMilestone()`:
```
ASSERT(!m_frame->isMainFrame() || webPage->corePage()->settings().suppressesIncrementalRendering() || m_didCompletePageTransition);
```

This basically means that we're sending a layout milestone notification even though `m_didCompletePageTransition`
is false. `m_didCompletePageTransition` is set to false during the early page load to avoid flashing white content
on navigation.

To address the issue, update LocalFrameView::fireLayoutRelatedMilestonesIfNeeded() to ask the client if we should
suppress layout milestones or not.

* Source/WebCore/loader/LocalFrameLoaderClient.h:
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::fireLayoutRelatedMilestonesIfNeeded):
* Source/WebKit/WebProcess/WebCoreSupport/WebLocalFrameLoaderClient.h:

Canonical link: https://commits.webkit.org/293120@main